WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198559
"display: contents" Content click does not trigger
https://bugs.webkit.org/show_bug.cgi?id=198559
Summary
"display: contents" Content click does not trigger
709922234
Reported
2019-06-05 04:14:03 PDT
https://codepen.io/mantou132/pen/gJyBoz
Click on the text in the page, sometimes without triggering the click event
Attachments
Patch
(5.77 KB, patch)
2019-06-13 07:21 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2019-06-06 10:18:41 PDT
I can reproduce on an iPhone with shipping iOS, taps indeed are recognized inconsistently. Moreover, on an iPad Pro with iOS 13 beta, they are not recognized as clicks at all.
Radar WebKit Bug Importer
Comment 2
2019-06-06 10:18:51 PDT
<
rdar://problem/51488524
>
Antoine Quint
Comment 3
2019-06-13 06:38:41 PDT
In WebPage::commitPotentialTap() we bail early because m_potentialTapNode->renderer() is false. It might be that we need to also check whether renderOrDisplayContentsStyle() returns something.
Antoine Quint
Comment 4
2019-06-13 07:21:50 PDT
Created
attachment 372052
[details]
Patch
WebKit Commit Bot
Comment 5
2019-06-13 09:05:34 PDT
Comment on
attachment 372052
[details]
Patch Clearing flags on attachment: 372052 Committed
r246404
: <
https://trac.webkit.org/changeset/246404
>
WebKit Commit Bot
Comment 6
2019-06-13 09:05:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug