"display: contents" Content click does not trigger https://bugs.webkit.org/show_bug.cgi?id=198559 <rdar://problem/51488524>

Patch by Antoine Quint <graouts@apple.com> on 2019-06-13
Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/events/ios/click-event-and-display-contents.html

* dom/Element.h:

Source/WebKit:

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::commitPotentialTap):

LayoutTests:

Add a new test that checks that tapping on an element with "display: contents" correctly gets a "click" event.

* fast/events/ios/click-event-and-display-contents-expected.txt: Added.
* fast/events/ios/click-event-and-display-contents.html: Added.

Canonical link: https://commits.webkit.org/212806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246404 268f45cc-cd09-0410-ab3c-d52691b4dbfc